# hc

./: .gitignore  CMakeLists.txt  README.md  SPEC.md
res/: tilemap.tm  tilemap.tmx
src/: animation.cpp  animation.hpp  assets.cpp  assets.hpp  camera.cpp  camera.hpp  config.hpp  delta.cpp  delta.hpp  ecp.cpp  ecp.hpp  entity.cpp  entity.hpp  entity.tpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  hcexception.cpp  hcexception.hpp  keyboard.cpp  keyboard.hpp  main.cpp  player.cpp  player.hpp  rectangle.cpp  rectangle.hpp  sprite.cpp  sprite.hpp  spritemap.cpp  spritemap.hpp  spritesheet.cpp  spritesheet.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
src/ecp/: component.cpp  component.hpp  entity.cpp  entity.hpp
src/entities/: block.cpp  block.hpp  player.cpp  player.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp
